cancel in progress

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,9 @@
 name: test
-concurrency: one_test_at_a_time
+# concurrency: one_test_at_a_time
+
+concurrency:
+  group: one_test_at_a_time
+  cancel-in-progress: true
 
 on: push
 
