--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,12 @@
 name: test
 # concurrency: one_test_at_a_time
 
+# concurrency:
+#   group: one_test_at_a_time
+#   cancel-in-progress: true
+
 concurrency:
-  group: one_test_at_a_time
+  group: ${{ github.ref }}
   cancel-in-progress: true
 
 on: push
